--- a/CSS/components/screen-header.css
+++ b/CSS/components/screen-header.css
@@ -1,14 +1,15 @@
 .screen-header {
-    display: flex;
-    justify-content: space-between;
-    padding: 17px;
-    align-items: center;
-}
+  display: flex;
+  justify-content: space-between;
+  padding: var( --horizontal-space);
+  align-items: center; 
+  margin-bottom: 10px;
+}                                                                                                                          
 .screen-header__title {
-    font-size: 32px;
-    font-weight: 600;
+  font-size: 32px;
+  font-weight: 600;
 }
 
-.screen-header__icons span{
-    margin-left: 23px;
+.screen-header__icons span {
+  margin-left: 23px;
 }
