--- a/CSS/components/user-component.css
+++ b/CSS/components/user-component.css
@@ -1,17 +1,29 @@
 .user-component {
-  display: flex;
+  justify-content: space-between;
 }
+
+.user-component,
 .user-component__column:first-child {
   display: flex;
   align-items: center;
 }
 .user-component__avatar {
-  width: 70px;
-  height: 70px;
+  width: 67px;
+  height: 67px;
   border-radius: 30px;
   margin-right: 18px;
 }
 
+.user-compnent__avatar--xl {
+  width: 80px;
+  height: 80px;
+  border-radius: 30px;
+}
+.user-compnent__avatar--sm {
+  width: 60px;
+  height: 60px;
+  border-radius: 25px;
+}
 .user-component__title {
   font-weight: 600;
   font-size: 18px;
@@ -20,10 +32,21 @@
 .user-component__subtitle {
   margin-top: 8px;
   color: rgba(0, 0, 0, 0.5);
-  font-size: 15px;
+  font-size: 13px;
 }
-.user-compnent__avatar--xl {
-  width: 80px;
-  height: 80px;
-  border-radius: 30px;
+
+.user-component__title--not-bold {
+  font-weight: 400;
+}
+
+.user-component__column:last-child {
+  color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  flex-direction: column;
+  align-items: flex-end;
+}
+.user-component__time {
+  margin-bottom: 10px;
+  display: block;
+  font-size: 15px;
 }
