--- a/CSS/screens/friends.css
+++ b/CSS/screens/friends.css
@@ -1,12 +1,28 @@
 #friends-display-link {
-    text-align: center;
-    display: block;
-    background-color: #fafafa;
-    padding: 15px 0px;
-    font-size: 16px;
-
+  text-align: center;
+  display: block;
+  background-color: #fafafa;
+  padding: 15px 0px;
+  font-size: 16px;
+  margin-bottom: 10px;
+  margin-top: -20px;
 }
 
-#friends-display-link i{
-    color:rgb(190, 190, 190);
+#friends-display-link i {
+  color: rgb(190, 190, 190);
+}
+
+.friends-screen {
+  padding: 0px var(--horizontal-space);
+}
+.firends-screen__channel {
+  margin-top: 25px;
+  padding-top: 15px;
+  border-top: var(--main-border);
+}
+.firends-screen__channel-header {
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+  color: rgba(0, 0, 0, 0.5);
 }
