--- a/CSS/style.css
+++ b/CSS/style.css
@@ -6,6 +6,8 @@
 @import "components/nav-bar.css";
 @import "components/screen-header.css";
 @import "components/user-component.css";
+@import "components/badge.css";
+@import "components/find.css";
 
 /* Screens */
 @import "screens/login.css";
@@ -13,7 +15,9 @@
 
 body {
   color: rgb(70, 70, 70);
-  font-family: font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
-
+  font-family: font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  height: 120vh;
 }
-
+.main-screen {
+  padding: 0px var(--horizontal-space);
+}
