--- a/CSS/variable.css
+++ b/CSS/variable.css
@@ -1,4 +1,7 @@
 :root {
   --yellow: rgb(238, 232, 183);
   --green: rgb(146, 179, 127);
+  --horizontal-space: 25px;
+  --main-border : 1px solid rgba(0, 0, 0, 0.2);
+  --graycolor :rgba(0,0,0,0.5);
 }
