--- a/css/style.css
+++ b/css/style.css
@@ -7,16 +7,22 @@
 @import "components/screen-header.css";
 @import "components/user-component.css";
 @import "components/badge.css";
-@import "components/find.css";
+@import "components/icon-row.css";
+@import "components/alt-screen-header.css";
+@import "components/no-mobile.css";
 
 /* Screens */
 @import "screens/login.css";
 @import "screens/friends.css";
+@import "screens/find.css";
+@import "screens/more.css";
+@import "screens/settings.css";
+@import "screens/chat.css";
 
 body {
   color: rgb(70, 70, 70);
   font-family: font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  height: 120vh;
+  height: 100vh;
 }
 .main-screen {
   padding: 0px var(--horizontal-space);
